optimized task edit further, fixed some issues identified by Chrome Audit.

--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -1,6 +1,6 @@
 $def with ()
-$var jsfiles: toolbox.js depTemplateEdit.js tags.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js
-$var cssfiles: taskEdit.css taskView.css
+$var jsfiles: toolbox.js depTemplateEdit.js tags.js jsonlint/c/js/json2.js jsonlint/c/js/jsl.parser.js jsonlint/c/js/jsl.format.js jsonlint/c/js/jsl.interactions.js jquery/jsoneditor/jsoneditor.js
+$var cssfiles: taskEdit.css taskView.css ../../static/script/jquery/jsoneditor/jsoneditor.css
 
 <div id="left_panel_te">
 	<div id="toolbox">
