--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -253,8 +253,8 @@ $var cssfiles: registry.css taskEdit.css taskView.css ../script/jquery/jquery.ui
         No other codeblocks have been defined on this Task.
     </div>
 </div>
-<div id="var_picker" class="ui-widget-content ui-corner-all value_picker hidden">
-    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/bookmark.png" alt="" style="height: 12px" /> Select a Variable &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="var_picker_close_btn" class="ui-icon ui-icon-close floatright pointer"></span> </span>
+<div id="var_picker" class="ui-widget-content ui-corner-all value_picker hidden" style="max-height: 300px;">
+    <span class="ui-state-default value_picker_title" style="padding-right: 10px;"> <img src="static/images/icons/bookmark.png" alt="" style="height: 12px" /> Select a Variable &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="var_picker_close_btn" class="ui-icon ui-icon-close floatright pointer"></span> </span>
     <div id="var_picker_variables">
         No variables have been defined on this Task.
     </div>
