--- a/ui/admin/static/style/text.css
+++ b/ui/admin/static/style/text.css
@@ -2,23 +2,18 @@
 /*            Type Styles             */
 /* -----------------------------------*/
 
-
-
 /* `Basic HTML
-----------------------------------------------------------------------------------------------------*/
+ ----------------------------------------------------------------------------------------------------*/
 
-body
-{
+body {
 	/* font: 13px/1.5 Helvetica, Arial, 'Liberation Sans' , FreeSans, sans-serif; */
 }
 
-a:focus
-{
+a:focus {
 	outline: 1px dotted invert;
 }
 
-hr
-{
+hr {
 	border: 0 #ccc solid;
 	border-top-width: 1px;
 	clear: both;
@@ -26,48 +21,40 @@ hr
 }
 
 /* `Headings
-----------------------------------------------------------------------------------------------------*/
+ ----------------------------------------------------------------------------------------------------*/
 
-h1
-{
+h1 {
 	font-size: 25px;
 }
 
-h2
-{
+h2 {
 	font-size: 22px;
 }
 
-h3
-{
+h3 {
 	font-size: 20px;
 }
 
-h4
-{
+h4 {
 	font-size: 18px;
 }
 
-h5
-{
+h5 {
 	font-size: 14px;
 }
 
-h6
-{
+h6 {
 	font-size: 12px;
 }
 
 /* `Spacing
-----------------------------------------------------------------------------------------------------*/
+ ----------------------------------------------------------------------------------------------------*/
 
-ol
-{
+ol {
 	list-style: decimal;
 }
 
-ul
-{
+ul {
 	list-style-type: none;
 }
 
