optimizations - pages draw faster when image sizes are explicit.

--- a/ui/admin/templates/home.html
+++ b/ui/admin/templates/home.html
@@ -18,7 +18,7 @@ $var cssfiles:
 				There are just a few more things you need to do to get started.
 			</p>
 			<p id="getting_started_img" class="hidden" style="text-align: center;">
-				<img alt="" src="static/images/cato_centerpiece.jpg" style="text-align: center;">
+				<img alt="" src="static/images/cato_centerpiece.jpg" height="249px" width="300px" style="text-align: center;">
 			</p>
 			<div id="getting_started_items"></div>
 		</div>
