--- a/ui/admin/templates/taskEdit.html
+++ b/ui/admin/templates/taskEdit.html
@@ -225,29 +225,29 @@ $var cssfiles: taskEdit.css taskView.css ../script/jquery/jquery.ui.ufd-0.6/css/
     Drop me in the new position.
 </div>
 <div id="step_validation_template" class="step_validation_template hidden">
-    <img src="static/images/icons/status_unknown_32.png" alt="" />
+    <img src="static/images/icons/status_unknown_32.png" alt="" height="32px" width="32px" />
     The following Command has <span></span>item(s) needing attention.
 </div>
 <div id="conn_picker" class="ui-widget-content ui-corner-all value_picker hidden">
-    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/connect_no.png" alt="" style="height: 12px" /> Select a Connection &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="conn_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
+    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/connect_no.png" alt="" height="12px" width="12px" /> Select a Connection &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="conn_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
     <div id="conn_picker_connections">
         No connections have been defined on this Task.
     </div>
 </div>
 <div id="key_picker" class="ui-widget-content ui-corner-all value_picker hidden">
-    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/connect_no.png" alt="" style="height: 12px" /> Select a Key &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="key_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
+    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/connect_no.png" alt="" height="12px" width="12px" /> Select a Key &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="key_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
     <div id="key_picker_keys">
         No keys have been defined for this Command type.
     </div>
 </div>
 <div id="codeblock_picker" class="ui-widget-content ui-corner-all value_picker hidden">
-    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/news_subscribe.png" alt="" style="height: 12px" /> Select a Codeblock &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="codeblock_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
+    <span class="ui-state-default value_picker_title"> <img src="static/images/icons/news_subscribe.png" alt="" height="12px" width="12px" /> Select a Codeblock &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="codeblock_picker_close_btn"  class="ui-icon ui-icon-close floatright pointer"></span> </span>
     <div id="codeblock_picker_codeblocks">
         No other codeblocks have been defined on this Task.
     </div>
 </div>
 <div id="var_picker" class="ui-widget-content ui-corner-all value_picker hidden" style="max-height: 300px;">
-    <span class="ui-state-default value_picker_title" style="padding-right: 10px;"> <img src="static/images/icons/bookmark.png" alt="" style="height: 12px" /> Select a Variable &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="var_picker_close_btn" class="ui-icon ui-icon-close floatright pointer"></span> </span>
+    <span class="ui-state-default value_picker_title" style="padding-right: 10px;"> <img src="static/images/icons/bookmark.png" alt="" height="12px" width="12px"  /> Select a Variable &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <span id="var_picker_close_btn" class="ui-icon ui-icon-close floatright pointer"></span> </span>
     <div id="var_picker_variables">
         No variables have been defined on this Task.
     </div>
