--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -82,7 +82,7 @@ $def with (content)
 				<!--   END Main Menu -->
 				<div id="userPreferences">
 
-					<a id="my_account_link" class="pointer user_prefs_item"><img src="static/images/icons/myaccount.png" alt="My Account" title="My Account" /></a>
+					<a id="my_account_link" class="pointer user_prefs_item"><img src="static/images/icons/myaccount.png" height="16px" width="16px" alt="My Account" title="My Account" /></a>
 				</div>
 				<div id="update_success_msg" class="hidden" style="color: #FFF; white-space: nowrap;
 				text-align: right;">
