--- a/ui/admin/templates/cloudEdit.html
+++ b/ui/admin/templates/cloudEdit.html
@@ -52,7 +52,7 @@ $var cssfiles:
 </div>
 <div id="content">
 	<span id="lblItemsSelected">0</span> Items Selected <span id="clear_selected_btn">&nbsp;</span><span
-	id="item_create_btn">Create</span><span id="item_delete_btn">Delete</span>
+	id="item_create_btn">Create</span><span id="item_delete_btn">Delete</span><span id="static_clouds_btn">Import</span>
 	<input type="text" id="txtSearch" class="search_text" />
 	<span id="item_search_btn">Search</span>
 	<table class="jtable" cellspacing="1" cellpadding="1" width="99%">
@@ -122,11 +122,6 @@ $var cssfiles:
 					<hr />
 					</td>
 				</tr>
-				<tr>
-					<td style="white-space: nowrap"> Predefined Clouds: <span id="static_clouds_info" class="ui-icon ui-icon-info forceinline pointer"></span></td>
-					<td><span id="static_clouds_btn">Create</span></td>
-				</tr>
-
 				<tr>
 					<td colspan="2"><div id="conn_test_result" style="margin-top: 10px;"></div><div id="conn_test_error" style="font-size: 0.8em; font-style: italic; margin-top: 10px;"></div></td>
 				</tr>
