Fixes #96 - MAIN steps are imported correctly.  New feature - 'Analyze' button on the import page will present a dialog telling the user what Tasks are in the import file.

--- a/ui/admin/templates/importObject.html
+++ b/ui/admin/templates/importObject.html
@@ -16,7 +16,7 @@ $var cssfiles:
             <button id="url_load_btn" class="ui-widget ui-state-default ui-corner-all ui-button-text-only" style="margin-top: -10px; font-weight: normal; font-size: 10pt;">Load</button>
             <hr />
             <textarea id="xml_to_import" class="w100pct code" rows="24"></textarea>
-            <span id="format_xml_btn">Format</span><span id="import_xml_btn">Import</span>
+            <span id="format_xml_btn">Format</span><span id="analyze_btn">Analyze</span><span id="import_xml_btn">Import</span>
         </div>
     </div>
 </div>
