template id now used on deployment table.  json is not required to create a template in the ui.

--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -19,9 +19,9 @@ $var cssfiles: taskEdit.css taskView.css ../../static/script/jquery/jsoneditor/j
                 <br />
                 <span class="detail_label">Description:</span>
                 <br />
-                <textarea id="txtDescription" rows="5" class="code" te_group="detail_fields" column="Description"></textarea>
+                <textarea id="txtDescription" rows="5" class="code" te_group="detail_fields" column="Description" disabled="disabled"></textarea>
                 <br />
-                <canvas id="canvas" width="100" height="100"></canvas>
+                <canvas id="canvas" width="48" height="48"></canvas>
                 <input type="hidden" id="iconb64" te_group="detail_fields" column="Icon" />
                 <input type='file' name='img' size='65' id='uploadimage' />
             </div>
