'Available' flag on deployment templates.

--- a/ui/admin/templates/depTemplateEdit.html
+++ b/ui/admin/templates/depTemplateEdit.html
@@ -17,6 +17,9 @@ $var cssfiles: taskEdit.css taskView.css ../../static/script/jquery/jsoneditor/j
                 <span class="detail_label">Version:</span>
                 <input type="text" id="txtTemplateVersion" class="task_details code" disabled="disabled" />
                 <br />
+                <label class="detail_label" for="chkTemplateAvailable">Available to Deploy?</label>
+                <input type="checkbox" id="chkTemplateAvailable" te_group="detail_fields" column="Available" />
+                <br />
                 <span class="detail_label">Description:</span>
                 <br />
                 <textarea id="txtDescription" rows="5" class="code" te_group="detail_fields" column="Description" disabled="disabled"></textarea>
