--- a/ui/admin/templates/depTemplateManage.html
+++ b/ui/admin/templates/depTemplateManage.html
@@ -42,6 +42,7 @@ $var cssfiles:
                 <th class="sortable"> Name </th>
                 <th class="sortable"> Version </th>
                 <th class="sortable"> Description </th>
+                <th class="sortable"> Available </th>
             </tr>
         </thead>
         <tbody id="templates"></tbody>
