Fixes #161 - template 'errors' are now 'info'.
Also, fixed longstanding bug where the "Update Successful" message in
the header wasn't visible.

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -84,7 +84,7 @@ $def with (content)
 
 					<a id="my_account_link" class="pointer user_prefs_item"><img src="static/images/icons/myaccount.png" height="16px" width="16px" alt="My Account" title="My Account" /></a>
 				</div>
-				<div id="update_success_msg" class="hidden" style="color: #FFF; white-space: nowrap;
+				<div id="update_success_msg" class="hidden" style="margin-top: -16px; margin-right: 8px; color: #FFF; white-space: nowrap;
 				text-align: right;">
 					UpdateSuccessful
 				</div>
