Fixes #87 - API endpoints for creating a shared credential.

--- a/ui/admin/templates/assetEdit.html
+++ b/ui/admin/templates/assetEdit.html
@@ -152,6 +152,7 @@ $var cssfiles:
                                 <table id="tblCredentialSelector" width="99%">
                                     <thead>
                                         <tr>
+                                            <th class="col_header">Name</th>
                                             <th class="col_header">Username</th>
                                             <th class="col_header">Domain</th>
                                             <th class="col_header">Description</th>
