--- a/ui/admin/templates/settings.html
+++ b/ui/admin/templates/settings.html
@@ -289,7 +289,7 @@ $var cssfiles:
 					<tr>
 						<td class="row_odd"> Use Legacy SSL </td>
 						<td class="row_odd">
-						<input type="checkbox" id="SMTPUseSSL" name="SMTPUseSSL" />
+						<input type="checkbox" id="SMTPLegacySSL" name="SMTPLegacySSL" />
 						</td>
 					</tr>
 					<tr>
