--- a/ui/admin/static/style/login.css
+++ b/ui/admin/static/style/login.css
@@ -7,11 +7,13 @@ body
 {
 	margin-left: auto;
 	margin-right: auto;
-	width: 50%;
+	width: 600px;
 }
-#container
-{
-	width: 700px;
+#csklogo {
+	position: absolute;
+    right: 10px;
+    top: 10px;
+    height: 50px;
 }
 #loginpanel
 {
@@ -19,7 +21,7 @@ body
 	height: 220px;
 	background-image: url(../images/login-banner.gif);
 	background-repeat: no-repeat;
-	background-position: -175px 54%; /* shorten it a bit */
+	background-position: -220px 54%; /* shorten it a bit */
 	box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.5);
 	border-radius: 6px 6px 6px 6px;
 }
