Closes #164 - smaller logout button to allow for a narrower window.

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -80,9 +80,9 @@ $def with (content)
 				<!-- Main Menu  -->
 				<ul id="main-menu" class="sf-menu"></ul>
 				<!--   END Main Menu -->
-				<div id="userPreferences">
-
-					<a id="my_account_link" class="pointer user_prefs_item"><img src="static/images/icons/myaccount.png" height="16px" width="16px" alt="My Account" title="My Account" /></a>
+            <div id="app_header_icons" class="floatright">
+					<img id="my_account_link" class="floatleft pointer app_header_icon" src="static/images/icons/myaccount.png" height="16px" width="16px" alt="My Account" title="My Account" />
+                    <img id="logout_btn" class="floatleft pointer app_header_icon" src="static/images/icons/exit_24.png" alt="Log Out" title="Log Out" />
 				</div>
 				<div id="update_success_msg" class="hidden" style="margin-top: -16px; margin-right: 8px; color: #FFF; white-space: nowrap;
 				text-align: right;">
