--- a/ui/admin/static/style/main.css
+++ b/ui/admin/static/style/main.css
@@ -94,17 +94,14 @@ body {
 	font-size: 12px;
 }
 
-#userPreferences {
-	cursor: pointer;
-	text-align: right;
-	margin-right: 8px;
-	line-height: 36px;
-	color: #fff;
+#app_header_icons {
+	position: fixed;
+	right: 10px;
+	padding-top: 12px;
 }
-
-.user_prefs_item {
-	margin-left: 5px;
-	margin-right: 5px;
+.app_header_icon {
+	height: 22px;
+	padding-right: 6px;
 }
 
 #left_panel {
