Added an 'about' link consistent with the Maestro ui.  Added config options for version and server to eliminate to ajax calls.

--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -68,6 +68,9 @@ $def with (content)
 				&copy; 2012 Cloud Sidekick
 			</div>
 
+            <div class="floatright" style="margin-right: 10px; cursor: pointer;" title="About Cato">
+                <img id="about_btn" src="static/images/icons/info.png" />
+            </div>
 			<div class="floatright" style="margin-right: 10px; margin-top: -6px;">
 				<span>Cloud Account: <select id="header_cloud_accounts"></select></span>
 			</div>
@@ -108,11 +111,7 @@ $def with (content)
 					<br />
 					<br />
 					<br />
-					Copyright © Cloud Sidekick 2012. All Rights Reserved.
-				</p>
-				<br />
-				<p>
-					<span id="info_dialog_info"></span>
+					Copyright © Cloud Sidekick 2013. All Rights Reserved.
 				</p>
 			</div>
 			<!-- End "about" dialog. -->
